Update Term deposit project.ipynb

--- a/Term deposit project.ipynb
+++ b/Term deposit project.ipynb
@@ -8,7 +8,7 @@
     "### **Problem Statement: Term Deposit Subscription Prediction**  \n",
     "\n",
     "#### **Business Context**  \n",
-    "A leading bank wants to **improve the effectiveness** of its term deposit marketing campaigns. Current outreach strategies rely on broad-based targeting, resulting in:  \n",
+    "A European bank wants to **improve the effectiveness** of its term deposit marketing campaigns. Current outreach strategies rely on broad-based targeting, resulting in:  \n",
     "- **High marketing costs** (contacting disinterested customers)  \n",
     "- **Missed revenue opportunities** (failing to identify likely subscribers)  \n",
     "- **Inefficient resource allocation** (manual lead prioritization)  \n",
